--- a/src/pages/grooming.astro
+++ b/src/pages/grooming.astro
@@ -8,6 +8,8 @@ import "@/styles/globals.css";
 ---
 
 <Layout title="Grooming">
-  <Booking />
-  <Services />
+  <div class="h-screen">
+    <Booking />
+    <Services />
+  </div>
 </Layout>
