--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -1,10 +1,14 @@
 ---
+import { officialStoreInfo } from "../../constants/StoreInfo.astro";
 
+const name = officialStoreInfo().name;
+const address = officialStoreInfo().address;
 ---
 
-<section class="text-center py-6 bg-[#FFC66D] -mt-1">
+<section class="text-center pt-10 pb-6 bg-[#FFC66D] -mt-1">
   <div class="font-bold tracking-widest">
-    <h2 class="text-lg pt-4 md:text-xl">PT Pet Supply</h2>
+    <h2 class="text-lg md:text-xl">{name}</h2>
+    <h2 class="text-sm md:text-md">{address} MA</h2>
     <h3 class="text-sm md:text-md">Serving The Community Since 2003</h3>
   </div>
   <h3 class="text-widest text-base pt-3 md:text-lg">
