--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,6 +8,13 @@ const backArrow = "../../../images/arrow.svg";
 // Use the defined schema in content/config.ts to ensure type safety
 const posts: CollectionEntry<"blog">[] = await getCollection("blog");
 
+const sortedPosts = posts.sort((a, b) => {
+  return (
+    new Date(b.data.publishDate).getTime() -
+    new Date(a.data.publishDate).getTime()
+  );
+});
+
 // Get unique tags from all posts
 const allTags = Array.from(new Set(posts.flatMap((post) => post.data.tags)));
 
@@ -28,7 +35,7 @@ const formatDate = (date: Date) => {
   <div class="bg min-h-screen w-[100vw] pb-10 flex justify-center">
     <div class="overlay"></div>
     <div class="flex-col justify-center w-[100vw] max-w-[1200px]">
-      <div class="pt-4 pl-4 flex justify-between items-start">
+      <div class="pt-4 pl-4 flex justify-between items-start drop-shadow-lg">
         <button
           class="flex items-center bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold py-1.5 px-3 rounded-xl no-underline"
           data-astro-prefetch
@@ -47,7 +54,7 @@ const formatDate = (date: Date) => {
       <div
         class="flex flex-col justify-center text-center w-3/4 md:w-2/3 pt-2 mx-auto"
       >
-        <p>
+        <p class="font-bold">
           Lorem ipsum odor amet, consectetuer adipiscing elit. Iaculis ex nisl
           himenaeos euismod nostra habitant. Class mattis tortor purus odio
           nullam bibendum posuere tortor semper. Magna eros ipsum nam accumsan
@@ -61,7 +68,9 @@ const formatDate = (date: Date) => {
               Filter by:
             </h3>
           </div>
-          <div class="flex space-x-1 p-2 overflow-x-auto pb-1 scrollbar-hide">
+          <div
+            class="flex space-x-1 p-2 overflow-x-auto pb-1 scrollbar-hide drop-shadow-lg"
+          >
             {/* Horizontal scroll container for tags */}
             {
               allTags.map((tag) => (
@@ -80,41 +89,41 @@ const formatDate = (date: Date) => {
       <div id="post-container" class="flex justify-center max-w-[1200px]">
         <div
           class="grid min-[690px]:grid-cols-2 lg:grid-cols-3 gap-4 place-items-center sm:w-[690px] lg:w-[1020px] px-4 pt-6 pb-16 drop-shadow-2xl"
+          id="post-grid"
         >
           {/* Post cards will be dynamically filtered */}
           {
-            posts.map((post) => (
-              <div
-                class="post-card relative flex flex-col w-[320px] min-[450px]:w-[400px] min-[690px]:w-[320px] lg:w-[320px] rounded-3xl border bg-[#F9DCB1]"
-                data-tags={post.data.tags.join(",")}
-              >
-                <img
-                  src="https://placehold.co/400x270"
-                  alt="Hashtag photo"
-                  class="rounded-t-3xl my-0"
-                />
-                <div class="py-2 px-4 rounded-xl">
-                  <a
-                    href={`/blog/${post.slug}/`}
-                    class="font-bold no-underline text-lg tracking-tighter"
-                  >
-                    {post.data.title}
-                  </a>
-                  <time class="absolute bottom-0 right-3 text-sm tracking-wider font-bold mb-2">
-                    {formatDate(new Date(post.data.publishDate))}
-                  </time>
-                  <div class="flex space-x-1">
-                    {post.data.tags.map((tag) => (
-                      <button class="bg-[#7F0201] text-white text-sm tracking-narrow px-2 rounded-xl pointer-events-none">
-                        {tag}
-                      </button>
-                    ))}
+            sortedPosts.map((post) => (
+              <a href={`/blog/${post.slug}/`} class="no-underline">
+                <div
+                  class="post-card relative flex flex-col w-[320px] min-[450px]:w-[400px] min-[690px]:w-[320px] lg:w-[320px] rounded-3xl border bg-[#F9DCB1]"
+                  data-tags={post.data.tags.join(",")}
+                >
+                  <img
+                    src="https://placehold.co/400x270"
+                    alt="Hashtag photo"
+                    class="rounded-t-3xl my-0"
+                  />
+                  <div class="py-2 px-4 rounded-xl">
+                    <h1 class="mb-1 font-bold no-underline text-lg tracking-tighter">
+                      {post.data.title}
+                    </h1>
+                    <time class="absolute bottom-0 right-3 text-sm tracking-wider font-bold mb-2">
+                      {formatDate(new Date(post.data.publishDate))}
+                    </time>
+                    <div class="flex space-x-1">
+                      {post.data.tags.map((tag) => (
+                        <button class="bg-[#7F0201] text-white text-sm tracking-narrow px-2 rounded-xl pointer-events-none">
+                          {tag}
+                        </button>
+                      ))}
+                    </div>
                   </div>
+                  <p class="min-h-[70px] mt-2 mx-2 leading-5">
+                    {post.data.description}
+                  </p>
                 </div>
-                <p class="min-h-[70px] mt-2 mx-2 leading-5">
-                  {post.data.description}
-                </p>
-              </div>
+              </a>
             ))
           }
         </div>
@@ -124,31 +133,29 @@ const formatDate = (date: Date) => {
 </BlogLayout>
 
 <script>
-  document.addEventListener("DOMContentLoaded", () => {
+  document.addEventListener("astro:page-load", () => {
     const tagButtons =
       document.querySelectorAll<HTMLButtonElement>(".tag-button");
-    const postCards = document.querySelectorAll<HTMLElement>(".post-card");
+    const postContainer = document.getElementById("post-grid");
+    const allPosts = [...document.querySelectorAll<HTMLElement>(".post-card")];
     let selectedTag: string | null = null;
 
-    // Function to apply animation classes
-    const applyAnimation = (postCard: HTMLElement, isVisible: boolean) => {
-      if (isVisible) {
-        postCard.classList.remove("hidden");
-        // Add a timeout to trigger CSS transitions
-        requestAnimationFrame(() => {
-          postCard.classList.add("animate");
-        });
-      } else {
-        postCard.classList.add("hidden");
-        // Remove the animate class after the animation completes
-        postCard.addEventListener(
-          "transitionend",
-          () => {
-            postCard.classList.remove("animate");
-          },
-          { once: true }
-        );
-      }
+    // Function to filter and re-render post cards
+    const filterPosts = (tag: string | null) => {
+      const filteredPosts = tag
+        ? allPosts.filter((post) =>
+            post.getAttribute("data-tags")?.split(",").includes(tag)
+          )
+        : allPosts;
+
+      // Clear current posts in the container
+      postContainer!.innerHTML = "";
+
+      // Append filtered posts to the grid
+      filteredPosts.forEach((post) => {
+        post.classList.remove("hidden");
+        postContainer?.appendChild(post);
+      });
     };
 
     // Add click event listener for each tag button
@@ -157,38 +164,21 @@ const formatDate = (date: Date) => {
         const target = event.target as HTMLButtonElement;
         const clickedTag = target.getAttribute("data-tag");
 
-        // Check if the clicked tag is already selected
+        // Toggle selected tag
         if (selectedTag === clickedTag) {
-          // Deselect the tag
-          target.classList.remove("active-tag");
-          selectedTag = null; // Reset selectedTag
-
-          // Show all post cards
-          postCards.forEach((postCard) => {
-            applyAnimation(postCard, true);
-          });
+          selectedTag = null;
         } else {
-          // Remove active class from all tag buttons
-          tagButtons.forEach((btn) => btn.classList.remove("active-tag"));
-
-          // Add active class to the clicked button
-          target.classList.add("active-tag");
-
-          // Set the selected tag to the clicked tag
           selectedTag = clickedTag;
-
-          // Filter post cards based on the selected tag
-          postCards.forEach((postCard) => {
-            const postTags = postCard.getAttribute("data-tags")?.split(",");
-
-            // Show or hide the post card based on the selected tag
-            if (postTags?.includes(selectedTag ?? "")) {
-              applyAnimation(postCard, true);
-            } else {
-              applyAnimation(postCard, false);
-            }
-          });
         }
+
+        // Update active button class
+        tagButtons.forEach((btn) => btn.classList.remove("active-tag"));
+        if (selectedTag) {
+          target.classList.add("active-tag");
+        }
+
+        // Filter posts based on the selected tag
+        filterPosts(selectedTag);
       });
     });
   });
@@ -209,7 +199,7 @@ const formatDate = (date: Date) => {
   }
 
   .bg {
-    background-image: url(/src/assets/blog-background.png);
+    background-image: url(/src/assets/blog-post-background.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
