--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -69,7 +69,7 @@ const formatDate = (date: Date) => {
             </h3>
           </div>
           <div
-            class="flex space-x-1 p-2 overflow-x-auto pb-1 scrollbar-hide drop-shadow-lg"
+            class="tag-container flex space-x-1 p-2 overflow-x-auto pb-1 scrollbar-hide drop-shadow-lg"
           >
             {/* Horizontal scroll container for tags */}
             {
@@ -190,7 +190,7 @@ const formatDate = (date: Date) => {
   }
 
   .scrollbar-hide::-webkit-scrollbar {
-    height: 8px;
+    height: 10px;
   }
 
   .scrollbar-hide::-webkit-scrollbar-thumb {
