--- a/src/components/sections/Footer.astro
+++ b/src/components/sections/Footer.astro
@@ -5,13 +5,13 @@ const name = officialStoreInfo().name;
 const address = officialStoreInfo().address;
 ---
 
-<section class="text-center pt-10 pb-6 bg-[#FFC66D] -mt-1">
+<section class="text-center py-6 bg-[#FFC66D] -mt-1">
   <div class="font-bold tracking-widest">
     <h2 class="text-lg md:text-xl">{name}</h2>
     <h2 class="text-sm md:text-md">{address} MA</h2>
-    <h3 class="text-sm md:text-md">Serving The Community Since 2003</h3>
+    <h3 class="text-sm md:text-md">Serving The Community Since 2004</h3>
   </div>
-  <h3 class="text-widest text-base pt-3 md:text-lg">
+  <h3 class="text-widest text-base pt-4 md:text-md">
     <a href="https://www.jdegaetano.com" target="_blank"
       >Designed and Developed by Justin DeGaetano</a
     >
