--- a/src/components/sections/Staff.astro
+++ b/src/components/sections/Staff.astro
@@ -8,7 +8,7 @@ const defaultStaffList = officialStaffList();
 
 <section
   id="staff"
-  class="relative py-10 tracking-wider text-center overflow-hidden"
+  class="relative pt-16 pb-10 tracking-wider text-center overflow-hidden"
 >
   <img
     src="src/assets/panel.png"
