Adjust styling & add Announcement crawl

--- a/src/components/sections/Announcements.astro
+++ b/src/components/sections/Announcements.astro
@@ -5,9 +5,28 @@ const { activeAnnouncement, body } = Astro.props;
 {
   activeAnnouncement === true ? (
     <section class="flex bg-[#7F0201] text-sm md:text-base font-bold tracking-wider lg:tracking-widest text-white text-outline-white">
-      <h2 class="mx-auto justify-between px-6 py-2">{body}</h2>
+      <h2 class="scroll-text mx-auto justify-between px-6 py-2 whitespace-nowrap">
+        {body}
+      </h2>
     </section>
   ) : (
     <section class="h-5 bg-[#7F0201]" />
   )
 }
+
+<style>
+  @media (max-width: 640px) {
+    .scroll-text {
+      animation: scroll-right-to-left 15s linear infinite;
+    }
+  }
+
+  @keyframes scroll-right-to-left {
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(-100%);
+    }
+  }
+</style>
