--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -11,12 +11,12 @@
   <img
     src="/src/assets/mainecoon.png"
     alt="Maine Coon"
-    class="absolute bottom-0 left-0 -ml-20 sm:-ml-10 md:-ml-28 lg:ml-20 xl:ml-30 2xl:ml-40 min-[1800px]:ml-80 min-[350px]:h-[400px] md:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-52 md:-mb-80"
+    class="absolute bottom-0 left-0 -ml-16 sm:-ml-10 md:-ml-28 lg:ml-20 xl:ml-30 2xl:ml-40 min-[1800px]:ml-80 min-[350px]:h-[330px] min-[475px]:h-[370px] md:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-52 md:-mb-80"
   />
   <img
     src="/src/assets/husky.png"
     alt="Siberian Husky"
-    class="absolute bottom-0 right-0 -mr-24 sm:-mr-14 md:-mr-32 lg:mr-14 xl:mr-24 2xl:mr-36 min-[1800px]:mr-72 min-[350px]:h-[400px] md:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-52 md:-mb-80"
+    class="absolute bottom-0 right-0 -mr-20 sm:-mr-14 md:-mr-32 lg:mr-14 xl:mr-24 2xl:mr-36 min-[1800px]:mr-72 min-[350px]:h-[330px] min-[475px]:h-[370px] md:h-[600px] drop-shadow-2xl w-auto max-h-[700px] object-contain -mb-52 md:-mb-80"
   />
 
   <img
