--- a/src/pages/grooming.astro
+++ b/src/pages/grooming.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import Layout from "../components/layouts/Layout.astro";
 
 import Booking from "../components/sections/Booking.astro";
@@ -12,4 +12,4 @@ import "@/styles/globals.css";
     <Booking />
     <Services />
   </div>
-</Layout>
+</Layout> -->
