--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import About from "../components/sections/About.astro";
 import Testimonials from "../components/sections/Testimonials.astro";
 import Buffer from "../components/ui/Buffer.astro";
 import Products from "../components/sections/Products.astro";
+import Grooming from "@/components/sections/Grooming.astro";
 import Blog from "../components/sections/Blog.astro";
 import Staff from "../components/sections/Staff.astro";
 import Contact from "../components/sections/Contact.astro";
@@ -17,6 +18,7 @@ import Contact from "../components/sections/Contact.astro";
   <Testimonials />
   <Buffer />
   <Products />
+  <Grooming />
   <Staff />
   <Blog />
   <Contact />
