--- a/src/pages/admin.astro
+++ b/src/pages/admin.astro
@@ -67,7 +67,7 @@ const allTags = await getCollection("blog").then((collection) => {
     <h1 class="font-bold text-2xl pb-2 mx-4">Update Staff Bios</h1>
     <button
       id="staff-toggle-button"
-      class="w-36 mb-4 mx-4 px-4 py-2 bg-[#7F0201] hover:bg-[#A52A2A] text-white rounded-3xl"
+      class="w-36 mb-4 mx-4 px-4 py-2 bg-[#7F0201] hover:bg-[#A52A2A] text-white font-bold rounded-3xl"
     >
       Show Staff List
     </button>
