Further ContactForm features & styling

--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -6,7 +6,7 @@
   id="about"
   class="mx-1 sm:mx-14 md:mx-28 lg:mx-64 pt-48 text-md md:text-base"
 >
-  <p class="ml-8 mr-2 sm:ml-0 sm:mr-0 sm:mx-10">
+  <p class="ml-8 mr-2 sm:ml-0 sm:mr-0 sm:mx-10 text-[#452B1F]">
     Lorem ipsum odor amet, consectetuer adipiscing elit. Id tincidunt augue quam
     adipiscing ante posuere egestas penatibus sollicitudin. Placerat odio
     suscipit adipiscing pellentesque; himenaeos dapibus egestas vitae? Consequat
