--- a/src/components/sections/Grooming.astro
+++ b/src/components/sections/Grooming.astro
@@ -1,8 +1,8 @@
-<section id="grooming" class="lg:mx-36 py-10 min-h-[700px]">
+<section id="grooming" class="lg:mx-36 min-h-[700px] -mt-36 pt-48">
   <h3 class="mx-10 lg:mx-24 pb-6 font-bold text-3xl tracking-widest">
     Pet Grooming
   </h3>
-  <p class="mx-10 sm:mx-16 md:mx-28">
+  <p class="mx-10 sm:mx-16 md:mx-28 text-[#452B1F]">
     Tortor vulputate netus nam sagittis, imperdiet pharetra porttitor taciti
     maecenas. Metus posuere consectetur non fermentum lacus eget tempor feugiat
     aenean. Lorem feugiat integer purus nullam penatibus faucibus semper
@@ -14,8 +14,8 @@
     porttitor eget mi nullam habitant fames odio sociis sed. Nunc velit dictum
     odio posuere hac senectus posuere lectus nullam?
   </p>
-  <div class="mx-5 py-10">
-    <ul class="grid grid-cols-2 gap-4 text-center">
+  <div class="mx-5 pt-10 pb-16">
+    <ul class="grid grid-cols-2 gap-4 text-center text-[#452B1F]">
       <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
       <li>Aliquam tincidunt mauris eu risus.</li>
       <li>Vestibulum auctor dapibus neque.</li>
