--- a/src/components/sections/Navbar.astro
+++ b/src/components/sections/Navbar.astro
@@ -15,7 +15,7 @@ const address = officialStoreInfo().address;
   class="flex w-full min-h-[35px] font-bold mx-auto px-4 xl:px-12 min-[1650px]:px-32 2xl:px-18 pt-3 xl:pt-6 pb-2 xl:pb-5 bg-[#FFC66D]"
 >
   <div
-    class="my-auto flex-1 flex items-start xl:items-center text-sm min-[520px]:text-lg xl:pl-0 pt-1 -mr-10 2xl:ml-16"
+    class="my-auto flex-1 flex items-start xl:items-center text-sm font-bold min-[520px]:text-lg xl:pl-0 pt-1 -mr-10 2xl:ml-16"
   >
     <!-- Phone Section -->
     <a
