--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -80,7 +80,7 @@ const formatDate = (date: Date) => {
               ))
             }
           </div>
-          <article class="pb-16 text-lg">
+          <article class="pb-16 text-lg text-[#452B1F]">
             {Content ? <Content /> : <p>Content not available</p>}
           </article>
         </div>
