--- a/src/components/sections/Staff.astro
+++ b/src/components/sections/Staff.astro
@@ -8,12 +8,12 @@ const defaultStaffList = officialStaffList();
 
 <section
   id="staff"
-  class="relative pt-16 pb-10 tracking-wider text-center overflow-hidden"
+  class="relative pb-10 tracking-wider text-center overflow-hidden -mt-36 pt-48"
 >
   <img
     src="src/assets/panel.png"
     alt="Wood paneling background"
-    class="absolute z-[-2] inset-0 w-full h-full object-cover"
+    class="absolute z-[-2] bottom-0 w-full h-[85%] object-cover"
   />
   <h3
     class="inline-block p-4 md:p-6 font-bold text-4xl tracking-widest bg-[#7F0201] bg-opacity-80 text-white text-outline-white rounded-3xl"
